# Fusemachines_Assignment_1

./: BikramKC_DataVisualization_Fusemachines.ipynb  Dockerfile  Logistic_regression_Student_(3).ipynb  Makefile  README.md  install-extensions.sh  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
aifellowship12factor/: __init__.py  dataset.py  features.py  plots.py
aifellowship12factor/modeling/: predict.py  train.py
api/currency_converter/: main.py
tests/: test_data.py
