[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aifellowship12factor"
version = "0.0.1"
description = "simple proejct on cookiecutter"
authors = [
  { name = "Bikram" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["aifellowship12factor"]
include = ["pyproject.toml", "aifellowship12factor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["aifellowship12factor"]
force-sort-within-sections = true

